# cnpj-processor

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cnpj-processor.code-workspace  config.example.env  pyproject.toml  requirements.txt
data/: ddls.sql  insert-cnpj-naturezas-juridicas.sql  insert-cnpj-paises.sql  insert-cnpj-qualificacao-socios.sql
data/csv_source/: .gitkeep
data/sql/: ddls.sql  essential_indexes.sql  essential_indexes_safe.sql  insert-cnpj-cnaes.sql  insert-cnpj-motivos.sql  insert-cnpj-municipios.sql  optimization_indexes.sql
docs/: DOWNLOAD_CSVS.md  ESTRUTURA.md  INDICES_DATABASE.md  INSTALACAO_BANCO.md  MELHORIAS_RECENTES.md  OTIMIZACAO_PERFORMANCE.md  PROCESSADORES.md  TROUBLESHOOTING.md  ULTRA_OPTIMIZATION.md  relacionamentos_tabelas.md
examples/: exemplos_filtros.json
scripts/: apply_indexes.py  benchmark_performance.py  carregar_dados_completo.py  cnpj_empresas.py  cnpj_estabelecimentos.py  cnpj_simples.py  cnpj_socios.py  download_rfb_csvs.py  main.py  main_optimized.py  main_streaming.py  main_ultra_optimized.py  monitor_carregamento.py  update_csvs.py
src/: __init__.py
src/cnpj_processor/: __init__.py  cnpj_processor.py  cnpj_processor_optimized.py  cnpj_processor_streaming.py  cnpj_processor_ultra_optimized.py
src/config/: __init__.py  config.py
src/filters/: __init__.py  filters.py
tests/: test_connection.py  test_exemplo_basico.py
