[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cnpj-processor"
version = "1.0.0"
description = "Sistema de Processamento de Dados CNPJ"
authors = [
    {name = "Marcos Bezerra", email = "mbezerra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "pymysql>=1.0.0",
    "sqlalchemy>=1.4.0",
]

[project.scripts]
cnpj-processor = "scripts.main:main"

[project.urls]
Homepage = "https://github.com/mbezerra/cnpj-processor"
Repository = "https://github.com/mbezerra/cnpj-processor.git"
Issues = "https://github.com/mbezerra/cnpj-processor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
